--- a/package.json
+++ b/package.json
@@ -27,9 +27,15 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.5",
+    "lodash": "^4.17.11",
+    "md5": "^2.2.1",
     "mysql2": "^1.6.5",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   }
 }
