--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mysql2": "^1.6.5",
     "nodemon": "^1.19.0",
     "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   }
