--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-variables.env
 # Created by https://www.gitignore.io/api/node
 # Edit at https://www.gitignore.io/?templates=node
 
@@ -88,4 +87,4 @@ typings/
 # DynamoDB Local files
 .dynamodb/
 
-# End of https://www.gitignore.io/api/node
+# End of https://www.gitignore.io/api/node.reify-cache/
