--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon index.js --ignore client/",
+    "server": "nodemon --ignore client/ --exec babel-node -- ./index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/ismetkov/spotify-clone#readme",
   "dependencies": {
+    "babel-plugin-dotenv": "^0.1.1",
+    "babel-register": "^6.26.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
@@ -33,10 +35,16 @@
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
     "mysql2": "^1.6.5",
-    "nodemon": "^1.19.0",
+    "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "nodemon": "^1.19.1",
+    "reify": "^0.19.1"
   }
 }
