--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/ismetkov/spotify-clone#readme",
   "dependencies": {
+    "babel-eslint": "^10.0.1",
     "babel-plugin-dotenv": "^0.1.1",
     "babel-register": "^6.26.0",
     "bcrypt-nodejs": "0.0.3",
@@ -39,12 +40,22 @@
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
     "nodemon": "^1.19.1",
+    "prettier": "^1.17.1",
     "reify": "^0.19.1"
   }
 }
