--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,13 @@
     }
   },
   "rules": {
+    "comma-dangle": ["error", {
+      "arrays": "never",
+      "objects": "never",
+      "imports": "never",
+      "exports": "never",
+      "functions": "ignore"
+  }],
     "no-console": "off",
     "prettier/prettier": [
       "error",
