--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
+    "material-design-icons": "^3.0.1",
     "npm": "^6.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
