--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-saga": "^1.0.2",
+    "reselect": "^4.0.0",
     "styled-components": "^4.2.0"
   },
   "scripts": {
