--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "material-design-icons": "^3.0.1",
     "npm": "^6.9.0",
     "react": "^16.8.6",
+    "react-compound-slider": "^2.0.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
@@ -17,6 +18,7 @@
     "redux-form": "^8.1.0",
     "redux-saga": "^1.0.2",
     "reselect": "^4.0.0",
+    "rxjs": "^6.5.2",
     "styled-components": "^4.2.0"
   },
   "scripts": {
